--- a/10_07_14/WebContent/index.html
+++ b/10_07_14/WebContent/index.html
@@ -7,8 +7,8 @@
 <body bgcolor="aquamarine"> 
 <font face="verdana" size="3" color="white"> 
  
-  <a href="inserisci.jsp"> Inserisci</a> 
+  <a href="inserisci.htm"> Inserisci</a> 
  
-<a href="modifica.jsp"> Modifica</a> </font> 
+<a href="modifica.htm"> Modifica</a> </font> 
 </body> 
 </html> 
